--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -26,10 +26,12 @@ body {
 
 .logo {
   text-align: center;
+  margin-top: 20px;
   @media screen and (min-width: $large){
     position: absolute;
     right: 0;
     top: -90px;
+    margin-top: 0;
   }
 }
 
@@ -147,4 +149,104 @@ a {
 .principle_sponsor {
     margin: 20px 0;
     text-align: center;
+}
+
+
+/* Menu styles */
+#toggle {
+  display: block;
+  @media screen and (min-width:720px){
+    display: none;
+  }
+  cursor: pointer;
+  width: 28px;
+  height: 30px;
+  margin: 10px auto 10px;
+  position: fixed;
+  right: 10px;
+  z-index: 10;
+  background: $purple;
+  border-radius: 5px;
+  padding-top: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#toggle span:after,
+#toggle span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -9px;
+}
+#toggle span:after{
+  top: 9px;
+}
+#toggle span {
+  position: relative;
+  display: block;
+}
+
+#toggle span,
+#toggle span:after,
+#toggle span:before {
+  width: 100%;
+  height: 5px;
+  background-color: $white;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+  border-radius: 2px;
+}
+
+/* on activation */
+#toggle.on span {
+  background-color: transparent;
+}
+#toggle.on span:before {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+#toggle.on span:after {
+  transform: rotate(-45deg) translate(7px, -8px);
+}
+#toggle.on + #menu {
+  display: block;
+}
+
+/* menu appearance*/
+#menu {
+  position: fixed;
+  right: 10px;
+  top: 56px;
+  color: #999;
+  width: 200px;
+  padding: 10px;
+  margin: auto;
+  text-align: center;
+  border-radius: 4px;
+  background: $purple;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.05);
+  display: none;
+  z-index: 10;
+}
+#menu:after {
+  position: absolute;
+  top: -15px;
+  left: 190px;
+  content: "";
+  display: none;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 20px solid white;
+}
+ul, li, li a {
+  list-style: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+li a {
+  padding: 5px;
+  color: #fff;
+  text-decoration: none;
+  transition: all .2s;
 }
