--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -151,6 +151,85 @@ a {
     text-align: center;
 }
 
+.sponsors {
+  background-color: rgb(255, 255, 255);
+  max-width: 657px;
+  padding: 5px 5px 5px 5px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  a {
+    cursor: pointer;
+    margin: 5px;
+  }
+}
+
+.sponsor-1 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -8px -8px;
+  width: 208px;
+  height: 48px;
+  display: block;
+}
+
+.sponsor-2 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -232px -16px;
+  width: 160px;
+  height: 40px;
+  display: block;
+}
+
+.sponsor-3 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -408px -16px;
+  width: 168px;
+  height: 40px;
+  display: block;
+}
+
+.sponsor-4 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -8px -64px;
+  width: 192px;
+  height: 48px;
+  display: block;
+}
+
+.sponsor-5 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -216px -72px;
+  width: 216px;
+  height: 40px;
+  display: block;
+}
+
+.sponsor-6 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -448px -64px;
+  width: 64px;
+  height: 48px;
+  display: block;
+}
+
+.sponsor-7 {
+  background: url('../images/sponsors/sprite.jpg') no-repeat -520px -80px;
+  width: 64px;
+  height: 32px;
+  display: block;
+}
+
+.sponsor-8 {
+  background: url(../images/sponsors/sprite.jpg) no-repeat -587px -80px;
+  width: 95px;
+  height: 40px;
+  display: block;
+}
+
+.sponsor-9 {
+  background: url(../images/sponsors/sprite.jpg) no-repeat -584px -10px;
+  width: 103px;
+  height: 72px;
+  display: block;
+}
+
 
 /* Menu styles */
 #toggle {
