--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -157,6 +157,8 @@ a {
   padding: 5px 5px 5px 5px;
   margin-top: 20px;
   margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
   a {
     cursor: pointer;
     margin: 5px;
@@ -165,10 +167,11 @@ a {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    flex-grow: 1;
   }
   img {
-    max-width: 160px;
-    max-height: 50px;
+    max-width: 180px;
+    max-height: 90px;
     vertical-align: top;
   }
 }
